# component-framework-ui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
prompts/: migrate-django.md
src/cf_ui/: __init__.py  django.py  fastapi.py  litestar.py
src/cf_ui/static/cf_ui/: cf_ui_alpine.js
src/cf_ui/templates/cf_ui/: assets.jinja
src/cf_ui/templates/cotton/bootstrap/: PLANNED.md
src/cf_ui/templates/cotton/bulma/cf/: breadcrumb.html  card.html  checkbox-group.html  form-field.html  modal.html  navbar.html  notification.html  pagination.html  panel.html  progress.html  select.html  table.html  tabs.html  textarea.html
src/cf_ui/templates/cotton/cf/: breadcrumb.html  modal.html  pagination.html  select.html
src/cf_ui/templates/cotton/daisy/: PLANNED.md
src/cf_ui/templates/cotton/foundation/: PLANNED.md
src/cf_ui/templates/jinja/bulma/: Breadcrumb.jinja  Card.jinja  CheckboxGroup.jinja  FormField.jinja  Modal.jinja  Navbar.jinja  Notification.jinja  Pagination.jinja  Panel.jinja  Progress.jinja  Select.jinja  Table.jinja  Tabs.jinja  Textarea.jinja
src/cf_ui/templates/jinja/fomantic/: PLANNED.md
src/cf_ui/templatetags/: cf_ui.py
tests/e2e/: _django_e2e_server.py  _e2e_django_settings.py  conftest.py  test_bulma_cotton.py  test_bulma_jinja.py
tests/integration/: conftest.py  test_cotton_integration.py  test_jinja_integration.py
tests/integration/cotton_app/: settings.py  urls.py  views.py
tests/integration/cotton_app/templates/cotton_gallery/: card.html  form_field.html  modal.html
tests/integration/jinja_app/: main.py
tests/unit/: conftest.py  test_alpine_js.py  test_asset_tags.py  test_consumer_compatibility.py  test_core.py
tests/unit/cotton/: conftest.py  test_content.py  test_feedback.py  test_forms.py  test_navigation.py
tests/unit/jinja/: conftest.py  test_content.py  test_feedback.py  test_forms.py  test_navigation.py
