[project]
name = "cf-ui"
version = "0.1.1"
description = "CSS framework UI kit for component-framework — Bulma, Bootstrap, Foundation, Fomantic, DaisyUI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Francis Secada", email = "francis.secada@gmail.com"}]
keywords = ["components", "bulma", "htmx", "alpinejs", "django", "fastapi", "litestar"]
dependencies = [
    "component-framework>=0.4",
    "pydantic>=2.0",
]

[project.optional-dependencies]
bulma = []
bootstrap = []
foundation = []
fomantic = []
daisy = []
all = [
    "cf-ui[bulma,bootstrap,foundation,fomantic,daisy,django,fastapi,litestar]",
]
django = [
    "django>=4.2",
    "django-cotton>=0.9",
]
fastapi = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinjax>=0.41",
    "python-multipart>=0.0.5",
]
litestar = [
    "litestar>=2.0",
    "jinja2>=3.1",
]
dev = [
    "cf-ui[django,fastapi,litestar]",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-django>=4.5",
    "pytest-playwright>=0.4",
    "httpx>=0.26",
    "jinja2>=3.1",
    "ruff>=0.1",
    "ty>=0.0.18",
    "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/fsecada01/component-framework-ui"
Repository = "https://github.com/fsecada01/component-framework-ui"
Issues = "https://github.com/fsecada01/component-framework-ui/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cf_ui"]

[tool.hatch.build]
include = [
    "src/cf_ui/**/*.py",
    "src/cf_ui/templates/**",
    "src/cf_ui/static/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.uv.sources]
component-framework = { git = "https://github.com/fsecada01/component-framework.git" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
